[metadata]
name = coinforbarter
version = 0.0.1
author = Alsaheem/21Toffy
author_email = adebisiayomide07@gmail.com
description = coinforbarter python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Alsaheem/coinforbarter-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True